<resources>
    <string name="application_touch_twice_to_exits">Nhấn BACK một lần nữa để thoát!</string>
    <!-- Dialog goto setting-->
    <string name="not_now">Không phải bây giờ</string>
    <string name="go_to_settings">Chuyển đến cài đặt</string>
    <string name="request_external_permission_title">Cho phép FSquare truy cập bộ nhớ điện thoại?</string>
    <string name="request_external_permission_description">Việc này cho phép ONE Home lưu trữ và truy cập thông tin như ảnh trên điện thoại và thẻ SD của bạn. Chạm Cài đặt > Quyền, rồi bật bộ nhớ.</string>
    <string name="require_permission">Yêu cầu cấp quyền</string>
    <string name="require_custom_permission">Vui lòng cấp quyền liên quan đến %s cho ứng dụng!</string>
    <string name="micro">micro</string>
    <string name="require_permission_location">Vui lòng cấp quyền truy cập vị trí cho ứng dụng</string>
    <string name="camera">camera</string>
    <string name="storage_new">bộ nhớ</string>
    <string name="login">Đăng nhập</string>
    <string name="create_your_account">Tạo tài khoản của bạn</string>
    <string name="input_your_account">Nhập tài khoản của bạn</string>
    <string name="your_account">Tài khoản của bạn</string>
    <string name="remember_me">Lưu tài khoản của tôi</string>
    <string name="policy">Tôi muốn nhận thông tin tiếp thị và chính sách thông tin từ FSqare.</string>
    <string name="next">Tiếp theo</string>
    <string name="guest">Khách</string>
    <string name="sign_in_with_email">Đăng nhập bằng Email</string>
    <string name="SuccessfullyCreate_an_account">Đã tạo một tài khoản thành công</string>
    <string name="After_this_you_can_explore_our_services_and_enjoy_our_products_Have_fun_and_enjoy_it">Sau này, bạn có thể khám phá các dịch vụ của chúng tôi và thưởng thức sản phẩm của chúng tôi. Hãy vui vẻ và tận hưởng nó!</string>
    <string name="Let_is_Explore">Hãy cùng khám phá</string>
    <string name="Do_not_have_an_account">Bạn chưa có tài khoản? </string>
    <string name="sinup">Đăng ký</string>
    <string name="Create_New_Account">Tạo tài khoản mới</string>
    <string name="Input_OTP_Verification">Nhập xác minh OTP</string>
    <string name="Send_code_reload_in">Gửi mã tải lại</string>
    <string name="Submit">Nộp</string>
    <string name="resend">Gửi lại</string>
    <string name="err_login">Email chưa được đăng ký hoặc không tồn tại</string>
    <string name="err_signup">Email đã được đăng ký hoặc không tồn tại</string>
    <string name="err_otp">OTP không hợp lệ. Vui lòng nhập lại.</string>
    <string name="cannot_resend_otp">Không thể gửi lại OTP</string>
    <string name="resend_otp_success">OTP đã được gửi lại.</string>
    <string name="err_verify">OTP không đúng hoặc đã hết hạn</string>
    <string name="err_validate_email">Email không hợp lệ. Vui lòng kiểm tra lại.</string>
    <string name="checkbox_policy">Vui lòng đọc kỹ điều khoản và ấn xác nhận để tiếp tục</string>

    <string name="error_have_no_internet">Xin vui lòng kiểm tra lại Kết nối mạng</string>
    <string name="error_undefine">Xin vui lòng kiểm tra lại Kết nối mạng</string>

    <string name="Newest">Sản phẩm mới nhất</string>
    <string name="Favorite">Sản phẩm yêu thích</string>
    <string name="Brand">Sản phẩm yêu thích</string>

    <!-- Setting profile strings -->
    <string name="First_Name">Tên</string>
    <string name="Last_Name">Họ</string>
    <string name="Birth_Date">Ngày Sinh</string>
    <string name="Email">Email</string>
    <string name="Country">Quê Quán</string>
    <string name="Phone">Điện Thoại</string>
    <string name="Update">Chỉnh Sửa</string>
    <string name="Default">Mặc định</string>
    <string name="Home">Nhà</string>
    <string name="Office">Văn Phòng</string>
    <string name="Add_New_Address">Thêm địa chỉ mới</string>
    <string name="Add">Thêm</string>
    <string name="Name_Address">Tên Địa Chỉ</string>
    <string name="Use_current_location">Sử Dụng Vị Trí Hiện Tại</string>
    <string name="English">Tiếng Anh</string>
    <string name="Vietnamese">Tiếng Việt</string>
    <string name="Add_New_Card">Thêm Thẻ Moi</string>
    <string name="Connected">Kết nối</string>
    <string name="General_Notification">Thông Báo Chung</string>
    <string name="Sound">Âm Thanh</string>
    <string name="Special_Offers">Ưu Đãi Đặc Biệt</string>
    <string name="Promo_And_Discount">Khuyến Mãi Và Giảm Giá</string>
    <string name="Payments">Thanh Toán</string>
    <string name="Cashback">Hoàn Tiền</string>
    <string name="App_Updates">Cập Nhập Ứng Dụng</string>
    <string name="New_Service_Available">Dịch Vụ Mới Có Sẵn</string>
    <string name="Remember">Nhớ</string>
    <string name="Face_ID">Face_ID</string>
    <string name="BIometric_ID">Sinh Trắc Học ID</string>
    <string name="Google_Authentication">Xác Thực Google</string>
    <string name="Change_PIN">Thay Đổi Mã PIN</string>
    <string name="Change_Password">Thay Đổi Mật Khẩu</string>
    <string name="Edit_Profile">Chỉnh sửa hồ sơ</string>
    <string name="Address">Địa chỉ</string>
    <string name="Notification">Thông báo</string>
    <string name="My_Wallete">Ví của tôi</string>
    <string name="Security">Bảo mật</string>
    <string name="Language">Ngôn ngữ</string>
    <string name="Privacy_Policy">Chính sách bảo mật</string>
    <string name="Logout">Đăng xuất</string>
    <string name="Profile">Hồ sơ</string>
    <string name="More">Thêm</string>
    <string name="City">Thành phố</string>
    <string name="District">Huyện</string>
    <string name="Sub_district">Phường-Xã</string>
    <string name="Street_and_Apartment">Đường và số nhà</string>
    <string name="Title_Address">Kiểu địa chỉ</string>

    <string name="Delete_Favorite">Xóa yêu thích</string>
    <string name="Text_confirm_delete_fav">Bạn có chắc muốn  sản phẩm này khỏi danh sách yêu thích ?</string>
    <string name="Confirm_delete">Đồng ý</string>
    <string name="Delete_Cart">Xóa giỏ hàng</string>
    <string name="Loggout">Đăng xuất</string>
    <string name="Text_confirm_loggout">Bạn có chắc muốn đăng xuất khỏi tài khoản này ?</string>
    <string name="Text_confirm_delete_cart">Bạn có chắc muốn xóa sản phẩm này khỏi danh sách giỏ hàng ?</string>


    <!--Cancel order view strings -->
    <string name="Cancel_Order">Hủy đơn hàng</string>
    <string name="Fsquare_looks_forward_to_receiving_customer_feedback_to_improve_our_service">Fsquare rất mong được sự góp ý của khách hàng để dịch vụ được tốt hơn</string>
    <string name="Changed_my_mind_wont_buy_anymore">Đổi ý, không mua nữa</string>
    <string name="Found_somewhere_cheaper">Tìm thấy chỗ khác rẻ hơn</string>
    <string name="Change_product_order_information_quantity_color_size">Thay đổi thông tin sản phẩm đặt hàng (số lượng, màu sắc, kích thước,...)</string>
    <string name="Other_reasons">Lý do khác</string>
    <string name="Cancel">Hủy</string>
    <string name="Order">Xác nhận</string>
    <string name="Note">Lưu ý:</string>
    <string name="Promotional_gifts_may_vary_depending_on_the_time_of_order">- Quà khuyến mãi có thể thay đổi theo thời điểm đặt hàng</string>


    <!--My order review strings -->
    <string name="Review">Đánh giá</string>
    <string name="How_is_your_order">Đơn hàng của bạn thế nào?</string>
    <string name="Please_give_your_rating_and_also_your_review">Hãy cho chúng tôi biết đánh giá và nhận xét của bạn...</string>
    <string name="Add_image">Thêm hình ảnh</string>
    <string name="Add_video">Thêm video</string>
    <string name="Comment">Bình luận</string>
    <string name="Reset">Làm lại</string>
<<<<<<< HEAD
    <string name="Apply">Áp dụng</string>
    <string name="Promo">Khuyến mại</string>
=======
>>>>>>> bb7258a1ff96a71d086ad7d56c8c0962da284ede

    <!-- Setting cart strings -->
    <string name="Checkuot">Thanh Toán</string>
    <string name="Cart">Giỏ hàng</string>
    <string name="Edit">Chỉnh sửa</string>
    <string name="Order_List">Danh sách đơn hàng</string>
    <string name="Chose_Shipping">Chọn phương thức giao hàng</string>
    <string name="Chose_Shipping_Type">Chọn loại hình giao hàng</string>
    <string name="Promo_Code">Mã khuyến mãi</string>
    <string name="Amount">Số tiền</string>
    <string name="Shipping">Vận chuyển</string>
    <string name="Total">Tổng</string>
    <string name="Continue_to_Payment">Tiếp tục đến bước thanh toán</string>
    <string name="Enter_Promo_Code">Nhập mã khuyến mãi</string>
    <string name="Order_Successful">Đặt hàng thành công</string>
    <string name="You_have_successfully_made_order">Bạn đã đặt hàng thành công</string>
    <string name="View_Order">Quay lại giỏ hàng</string>
    <string name="View_E_Receipt">Xem biên nhận điện tử</string>
<<<<<<< HEAD
    <string name="Description">Mô tả</string>
    <string name="Size">Kích thước</string>
    <string name="Color">Màu sắc</string>
    <string name="Product_description">Mô tả sản phẩm</string>
    <string name="Price">Giá</string>
    <string name="Add_to_Cart">Thêm vào giỏ hàng</string>
=======

    <!-- Filter strings -->
    <string name="Filter">Bộ lọc</string>
    <string name="Categories">Thể loại</string>
    <string name="Gender">Giới tính</string>
    <string name="All">Tất cả</string>
    <string name="Man">Nam</string>
    <string name="Women">Nữ</string>
    <string name="Price">Giá</string>
    <string name="Popular">Phổ biến</string>
    <string name="Newest_shoes">Mới nhất</string>
    <string name="Special">Đặc biệt</string>
    <string name="Rating">Xếp hạng</string>
>>>>>>> bb7258a1ff96a71d086ad7d56c8c0962da284ede


    <!-- Setting wallet strings -->
    <string name="My_E_Wallet">Ví Điện Tử Của Tôi</string>
    <string name="Transaction_History">Lịch sử giao dịch</string>
    <string name="See_all">Xem tất cả</string>
    <string name="Enter_the_amount_of_top_up">Nhập số tiền cần nạp</string>
    <string name="Continue">Tiếp tục</string>
    <string name="Select_the_Top_Up_method_you_want_to_use.">Chọn phương thức nạp tiền mà bạn muốn sử dụng.</string>
    <string name="Add_New_Card.">Thêm thẻ mới.</string>
    <string name="Confirm_Payment.">Xác nhận thanh toán</string>
    <string name="Enter_your_PIN_to_confirm_top_up.">Nhập mã PIN của bạn để xác nhận nạp tiền.</string>
    <string name="Payment_Methods">Phương thức thanh toán</string>
    <string name="Transaction_IN">Nhận tiền</string>
    <string name="Date">Ngày</string>
    <string name="Status">Trạng thái</string>

    <!-- PullToRefresh view strings -->
    <string name="pull_refresh_view_refreshing">Đang làm mới</string>
    <string name="pull_refresh_view_refresh_success">Đã xong</string>
    <string name="pull_refresh_view_refresh_fail">Không thành công</string>
    <string name="pull_refresh_view_start">Kéo để làm mới</string>
    <string name="pull_refresh_view_end">Thả để làm mới</string>
    <string name="text_btn_save">Lưu</string>

    <string name="Filter">Bộ lọc</string>
    <string name="Categories">Thể loại</string>
    <string name="Gender">Giới tính</string>
    <string name="All">Tất cả</string>
    <string name="Man">Nam</string>
    <string name="Women">Nữ</string>
    <string name="Popular">Phổ biến</string>
    <string name="Newest_shoes">Mới nhất</string>
    <string name="Special">Đặc biệt</string>
    <string name="Rating">Xếp hạng</string>

    <string name="no_internet_connection">không có kết nối internet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home_label">Trang chủ</string>
    <string name="main_tab_auto_scene_label">Giỏ hàng</string>
    <string name="Orders">Đơn hàng</string>
    <string name="wallet">Ví</string>
    <string name="profile">Cá nhân</string>
    <string name="popular">Phổ biến</string>
    <string name="see_more">Xem thêm</string>
    <string name="todo">TODO</string>
    <string name="history_adapter_empty_list">Không có dữ liệu</string>
</resources>