<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/_10sdp">
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Delete_Favorite"
            android:textSize="@dimen/_18sdp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/opensans_semi_bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Text_confirm_delete_fav"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/opensans_regular"
            android:textColor="#282C36"
            android:layout_marginVertical="@dimen/_10sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                style="@style/ButtonApp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Confirm_delete"
                style="@style/ButtonBorderOrange"
                android:layout_weight="1"
                android:layout_marginStart="10dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>