<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/_10sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cancel_Order"
                android:textSize="@dimen/_18sdp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/opensans_semi_bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fsquare_looks_forward_to_receiving_customer_feedback_to_improve_our_service"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="#282C36"
                android:layout_marginVertical="@dimen/_10sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primary" />
                    <TextView
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Changed_my_mind_wont_buy_anymore"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/opensans_regular"
                        android:textColor="#282C36"/>
                </RadioGroup>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primary" />
                    <TextView
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Found_somewhere_cheaper"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/opensans_regular"
                        android:textColor="#282C36"/>
                </RadioGroup>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primary" />
                    <TextView
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Change_product_order_information_quantity_color_size"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/opensans_regular"
                        android:textColor="#282C36"/>
                </RadioGroup>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primary" />
                    <TextView
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Other_reasons"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/opensans_regular"
                        android:textColor="#282C36"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel"
                    style="@style/ButtonApp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConfirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Order"
                    style="@style/ButtonBorderOrange"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Note"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="#282C36"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Promotional_gifts_may_vary_depending_on_the_time_of_order"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="#282C36"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>